# neufox-2FA

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
docker/: README.md  build-all.sh  build.sh
docker/linux/: Dockerfile  docker-entrypoint.sh
docker/windows/: Dockerfile  build-all.ps1  build-entrypoint.ps1  build.ps1
include/: neufox-2fa.inc
src/: totp-component.cpp  totp-component.hpp  totp-extension.cpp  totp-extension.hpp  totp-interface.hpp  totp-main.cpp  totp-natives.cpp  totp-natives.hpp  totp-player-data.cpp  totp-player-data.hpp  totp-plugin.hpp  totp-utils.cpp  totp-utils.hpp  version.hpp.in
